Update package name and library references, refactor URLRequest configuration options, and improve file organization.
- Refactored package name to "URLConfig" and updated library references accordingly.
- Improved URLRequest configuration by organizing host, path, query parameters, body content, HTTP method, headers, timeout interval, encoder settings, and default host handling.
- Reorganized files into appropriate extensions for URLRequest related functionalities.

--- a/URLConfig.xcodeproj/xcshareddata/xcschemes/EmbeddedInApp.xcscheme
+++ b/URLConfig.xcodeproj/xcshareddata/xcschemes/EmbeddedInApp.xcscheme
@@ -18,7 +18,7 @@
                BlueprintIdentifier = "4FA360522C14BAC100040578"
                BuildableName = "EmbeddedInApp.app"
                BlueprintName = "EmbeddedInApp"
-               ReferencedContainer = "container:NativeNetwork.xcodeproj">
+               ReferencedContainer = "container:URLConfig.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,7 +47,7 @@
             BlueprintIdentifier = "4FA360522C14BAC100040578"
             BuildableName = "EmbeddedInApp.app"
             BlueprintName = "EmbeddedInApp"
-            ReferencedContainer = "container:NativeNetwork.xcodeproj">
+            ReferencedContainer = "container:URLConfig.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -64,7 +64,7 @@
             BlueprintIdentifier = "4FA360522C14BAC100040578"
             BuildableName = "EmbeddedInApp.app"
             BlueprintName = "EmbeddedInApp"
-            ReferencedContainer = "container:NativeNetwork.xcodeproj">
+            ReferencedContainer = "container:URLConfig.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
