--- a/URLConfig.xcodeproj/xcshareddata/xcschemes/URLConfig.xcscheme
+++ b/URLConfig.xcodeproj/xcshareddata/xcschemes/URLConfig.xcscheme
@@ -16,9 +16,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4FA360792C15D89500040578"
-               BuildableName = "NativeNetwork.framework"
-               BlueprintName = "NativeNetwork"
-               ReferencedContainer = "container:NativeNetwork.xcodeproj">
+               BuildableName = "URLConfig.framework"
+               BlueprintName = "URLConfig"
+               ReferencedContainer = "container:URLConfig.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -30,9 +30,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4FA360802C15D89600040578"
-               BuildableName = "NativeNetworkTests.xctest"
-               BlueprintName = "NativeNetworkTests"
-               ReferencedContainer = "container:NativeNetwork.xcodeproj">
+               BuildableName = "URLConfigTests.xctest"
+               BlueprintName = "URLConfigTests"
+               ReferencedContainer = "container:URLConfig.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -70,9 +70,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4FA360792C15D89500040578"
-            BuildableName = "NativeNetwork.framework"
-            BlueprintName = "NativeNetwork"
-            ReferencedContainer = "container:NativeNetwork.xcodeproj">
+            BuildableName = "URLConfig.framework"
+            BlueprintName = "URLConfig"
+            ReferencedContainer = "container:URLConfig.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
