--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ NativeNetwork.xcodeproj/project.xcworkspace/xcuserdata/
 NativeNetwork.xcodeproj/xcuserdata/alexeynenastev.xcuserdatad/
 
 Package.resolved
+
+URLConfig.xcodeproj/project.xcworkspace/xcuserdata/
