Update project structure and file headers for consistency and copyright information.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ NativeNetwork.xcodeproj/xcuserdata/alexeynenastev.xcuserdatad/
 Package.resolved
 
 URLConfig.xcodeproj/project.xcworkspace/xcuserdata/
+
+URLConfig.xcodeproj/xcuserdata/
